--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,10 +39,22 @@ dependencies:
   firebase_storage: ^12.4.1
   google_sign_in: ^6.2.2
   flutter_facebook_auth: ^7.1.1
+  image_picker: ^1.1.2
+  path_provider: ^2.1.5
+  http: ^1.3.0
+  fl_chart: ^0.70.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/app_icon.png"
+  adaptive_icon_foreground: "assets/icon/app_icon_foreground.png"
+  adaptive_icon_background: "#ffffff"
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -66,6 +78,9 @@ flutter:
     - assets/bg1.png
     - assets/bg2.png
     - assets/bg3.png
+    - assets/user.png
+    - assets/bmi_meter.png
+    - assets/bmi_needle.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
